# oasis

./: .gitignore  build.js
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: files.rs  sys.rs  upload.rs  user.rs
backend/src/entity/: copy_move_task.rs  error.rs  file.rs  site.rs  user.rs
backend/src/service/: app_state.rs  auth.rs  fairings.rs  range.rs  static_route.rs  token.rs  track.rs
backend/src/util/: constants.rs  db.rs  file_system.rs  init.rs  local_ip.rs  mod.rs  rocket_env.rs  serverconfig.rs
frontend/: package-lock.json
