[package]
name = "oasis"
version = "0.2.5"
authors = ["Cheng <machengiam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5", features = ["json", "tls"]}
anyhow = "1.0"
async_zip = { version = "0.0.16", features = ["deflate", "tokio", "tokio-fs"] }
tokio-util = "0.7"
chardetng = "0.1.14"
chrono = "0.4"
bcrypt = "0.15"
encoding_rs = "0.8.28"
fs_extra = "1.2"
include_dir = "0.7"
jsonwebtoken = "9.2"
lazy_static = "1.4.0"
local-ip-address = "0.6.1"
rand = "0.8.4"
regex = "1.0"
sha2 = "0.10"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite" ] }
sysinfo = "0.30"
tokio = { version = "1.10.1", features = ["full"] }
time = "0.3"
urlencoding = "2.1.0"
uuid = { version = "1.7", features = ["v4"] }
walkdir = "2"
